<?xml version="1.0"?>
<package format="2">
  <name>laser_odom_from_tf</name>
  <version>0.0.0</version>
  <description>The laser_odom_from_tf package</description>

  <maintainer email="arghyame20buet@gmail.com">Arghya Chatterjee</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
